Alteracao de arquivos para o envio

--- a/case-dp6/index.html
+++ b/case-dp6/index.html
@@ -53,10 +53,10 @@
         </ul>
       </li>
       <li class="menu-lista-item">
-        <a href="http://www.dp6.com.br/contato/" target="_blank" class="menu-lista-link menu-lista-contato" onClick="ga('send',{hitType: 'event',eventCategory: 'menu',eventAction: 'entre_em_contato',eventLabel: 'link_externo'});">Entre em Contato</a>
+        <a href="http://www.dp6.com.br/contato/" target="_blank" class="menu-lista-link menu-lista-contato" onclick="ga('send',{hitType: 'event',eventCategory: 'menu',eventAction: 'entre_em_contato',eventLabel: 'link_externo'});">Entre em Contato</a>
       </li>
       <li class="menu-lista-item">
-        <a href="http://autos.dp6.com.br/autos_revista_vfinal.pdf" class="menu-lista-link menu-lista-download" target="_pdf" onClick="ga('send',{hitType: 'event',eventCategory: 'menu',eventAction: 'download_pdf',eventLabel: 'download_pdf'});">Download PDF</a>
+        <a href="http://autos.dp6.com.br/autos_revista_vfinal.pdf" class="menu-lista-link menu-lista-download" target="_pdf" onclick="ga('send',{hitType: 'event',eventCategory: 'menu',eventAction: 'download_pdf',eventLabel: 'download_pdf'});">Download PDF</a>
       </li>
     </ul>
     <div class="menu-rodape">
@@ -80,14 +80,17 @@
 <h4 class="subtitulo1">Biblioteca</h4>A biblioteca indicada para o disparo da coleta sugerida é a <a href="https://developers.google.com/analytics/devguides/collection/analyticsjs" class="docs"><b>analytics.js</b></a>. As instruções de como utilizá-la para <a href="https://developers.google.com/analytics/devguides/collection/analyticsjs/pages" class="docs"><b>Visualizações de Página</b></a> e <a href="https://developers.google.com/analytics/devguides/collection/analyticsjs/events" class="docs"><b>Eventos</b></a>, solicitados a seguir, estão disponíveis na mesma documentação. A propriedade que deverá receber os dados é a <b>UA-12345-6</b>.<p class="secao-paragrafo">As instruções de como realizar a implementação está nas documentações apontadas, entretanto, caso possua qualquer dúvida, não hesite em entrar em contato conosco. Além disso, o PDF enviado em conjunto a este ambiente possui os eventos que deverão ser implementados.</p><a class="next-page" href="analise.html">Análise</a>
     </section>
   </main>
+  <script src="js/tagueamento.js"></script>
   <script src="js/jquery-3.5.1.min.js"></script>
   <script>
     window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-    ga('create', 'G-4GXZ8Q9PJR', 'auto');
-    ga('send', 'pageview');
+    ga('create', 'UA-12345-6', 'auto');
+    ga('send', {
+      hitType: 'pageview',
+      page: location.pathname
+    });
     </script>
   <script async src='https://www.google-analytics.com/analytics.js'></script>
-  <script src="js/tagueamento.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
