--- a/case-dp6/analise.html
+++ b/case-dp6/analise.html
@@ -53,10 +53,10 @@
         </ul>
       </li>
       <li class="menu-lista-item">
-        <a href="http://www.dp6.com.br/contato/" target="_blank" class="menu-lista-link menu-lista-contato" onClick="ga('send',{hitType: 'event',eventCategory: 'menu',eventAction: 'entre_em_contato',eventLabel: 'link_externo'});">Entre em Contato</a>
+        <a href="http://www.dp6.com.br/contato/" target="_blank" class="menu-lista-link menu-lista-contato" onclick="ga('send',{hitType: 'event',eventCategory: 'menu',eventAction: 'entre_em_contato',eventLabel: 'link_externo'});">Entre em Contato</a>
       </li>
       <li class="menu-lista-item">
-        <a href="http://autos.dp6.com.br/autos_revista_vfinal.pdf" class="menu-lista-link menu-lista-download" target="_pdf" onClick="ga('send',{hitType: 'event',eventCategory: 'menu',eventAction: 'download_pdf',eventLabel: 'download_pdf'});">Download PDF</a>
+        <a href="http://autos.dp6.com.br/autos_revista_vfinal.pdf" class="menu-lista-link menu-lista-download" target="_pdf" onclick="ga('send',{hitType: 'event',eventCategory: 'menu',eventAction: 'download_pdf',eventLabel: 'download_pdf'});">Download PDF</a>
       </li>
     </ul>
     <div class="menu-rodape">
@@ -84,15 +84,17 @@
 <h5 class="subtitulo2">Mauris in iaculis neque</h5><p class="secao-paragrafo">Mauris in iaculis neque, vitae iaculis odio. Cras metus metus, finibus ac volutpat at, congue id nulla. Ut nec erat nec tortor commodo mattis ut ac erat. Maecenas in tortor purus. Morbi ut orci a augue condimentum hendrerit. Mauris pellentesque ipsum nec magna fringilla, sit amet dignissim quam luctus. Morbi eu nisi nec leo sollicitudin pulvinar. Quisque a dolor velit. Pellentesque lobortis ex a mauris venenatis, in mattis sem ornare. Integer at enim turpis. Quisque tellus massa, porta vel cursus vel, varius eu magna. Etiam ac eros vel turpis aliquam porttitor. <span class="highlight-2 odd">Sed tincidunt orci sed massa viverra pharetra.</span></p><a class="next-page" href="sobre.html">Sobre</a><div class="info-montadora" data-id="lorem"><p class="secao-paragrafo">Suspendisse facilisis neque eget ipsum commodo dictum. In convallis rutrum nisl, quis sagittis libero. Curabitur interdum sagittis dui, non vulputate nunc mollis eu. Quisque egestas cursus leo commodo aliquet. Nam convallis congue risus, maximus sollicitudin lorem aliquam non. Morbi in nibh at ligula aliquam scelerisque. Vestibulum porta tristique venenatis. Aliquam luctus luctus arcu, ut condimentum eros tempor a. Nam egestas posuere nulla, ullamcorper imperdiet sem vestibulum in. Duis vel sagittis risus. Integer sagittis at leo quis hendrerit. Vivamus in suscipit augue. Etiam fringilla mi et lectus consequat porttitor. Proin a ipsum quam. Vestibulum pulvinar pellentesque nisi sit amet rutrum.</p></div><div class="info-montadora" data-id="ipsum"><p class="secao-paragrafo">Proin sed laoreet felis. Vivamus at egestas ante, vel viverra enim. Praesent facilisis erat tempor, suscipit diam vitae, pellentesque justo. Sed finibus ligula massa, vitae aliquet ex tincidunt sed. Aliquam scelerisque nunc a mollis accumsan. Nunc fringilla, diam eu porta gravida, lacus erat aliquet dolor, non consequat ante nisi sed ipsum. Nunc efficitur, mi consequat tincidunt ullamcorper, ligula justo consectetur erat, sed vestibulum purus nisi in dui. Quisque molestie interdum leo, sit amet malesuada urna molestie non. Phasellus eu diam efficitur, tincidunt velit quis, viverra mi. Fusce commodo et quam vel posuere. Nulla elementum orci eu lobortis maximus. Etiam suscipit pellentesque tellus, ac venenatis erat faucibus et. Pellentesque tincidunt magna ac turpis dictum, ut rhoncus turpis tristique.</p><div class="info-montadora" data-id="dolor"><p class="secao-paragrafo">Sed in purus sed neque euismod molestie eget vehicula dolor. Vestibulum ultrices sit amet turpis vel ullamcorper. Sed sit amet metus finibus, ullamcorper mauris in, aliquet dolor. Vivamus ipsum turpis, congue non ante et, sodales semper eros. Nullam rhoncus ipsum odio, id viverra nisl pharetra eu. Fusce blandit libero mi, eget dignissim libero placerat vel. Nulla ultricies iaculis euismod. Vestibulum luctus neque ut justo pulvinar, vel vestibulum lectus dapibus. Praesent quis lacus nec felis vestibulum porttitor quis nec leo. Donec maximus, magna ac pulvinar ultrices, libero neque condimentum arcu, vel consequat leo nibh sed arcu.</p></div>
     </section>
   </main>
+  <script src="js/tagueamento.js"></script>
   <script src="js/jquery-3.5.1.min.js"></script>
   <script>
     window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-    ga('create', 'G-4GXZ8Q9PJR', 'auto');
-    ga('send', 'pageview');
+    ga('create', 'UA-12345-6', 'auto');
+    ga('send', {
+      hitType: 'pageview',
+      page: location.pathname
+    });
     </script>
   <script async src='https://www.google-analytics.com/analytics.js'></script>
   <script src="js/main.js"></script>
-  <script src="js/tagueamento.js"></script>
-
 </body>
 </html>
