--- a/case-dp6/sobre.html
+++ b/case-dp6/sobre.html
@@ -53,10 +53,10 @@
         </ul>
       </li>
       <li class="menu-lista-item">
-        <a href="http://www.dp6.com.br/contato/" target="_blank" class="menu-lista-link menu-lista-contato" onClick="ga('send',{hitType: 'event',eventCategory: 'menu',eventAction: 'entre_em_contato',eventLabel: 'link_externo'});">Entre em Contato</a>
+        <a href="http://www.dp6.com.br/contato/" target="_blank" class="menu-lista-link menu-lista-contato" onclick="ga('send',{hitType: 'event',eventCategory: 'menu',eventAction: 'entre_em_contato',eventLabel: 'link_externo'});">Entre em Contato</a>
       </li>
       <li class="menu-lista-item">
-        <a href="http://autos.dp6.com.br/autos_revista_vfinal.pdf" class="menu-lista-link menu-lista-download" target="_pdf" onClick="ga('send',{hitType: 'event',eventCategory: 'menu',eventAction: 'download_pdf',eventLabel: 'download_pdf'});">Download PDF</a>
+        <a href="http://autos.dp6.com.br/autos_revista_vfinal.pdf" class="menu-lista-link menu-lista-download" target="_pdf" onclick="ga('send',{hitType: 'event',eventCategory: 'menu',eventAction: 'download_pdf',eventLabel: 'download_pdf'});">Download PDF</a>
       </li>
     </ul>
     <div class="menu-rodape">
@@ -76,21 +76,23 @@
     <section>
       
 <h2 class="secao-titulo">Sobre</h2>
-<h3 id="contato" class="secao-subtitulo">Contato</h3><form class="contato">  <ul>    <li>      <label for="nome">Nome</label>      <input type="text" id="nome" placeholder="Nome Teste">    </li>    <li>      <label for="email">E-Mail</label>    <input type="email" id="email" placeholder="email@dominio.com">    </li>    <li>      <label for="telefone">Telefone</label>    <input type="tel" id="telefone" placeholder="(11) 4455-4455">    </li>    <li>      <label for="aceito">Aceito que entrem em contato</label>      <input type="checkbox" id="aceito">    </li>    <li>      <button type="submit">Enviar</button>    </li>  </ul></form><br><br>
+<h3 id="contato" class="secao-subtitulo">Contato</h3><form class="contato">  <ul>    <li>      <label for="nome">Nome</label>      <input type="text" id="nome" placeholder="Nome Teste">    </li>    <li>      <label for="email">E-Mail</label>    <input type="email" id="email" placeholder="email@dominio.com">    </li>    <li>      <label for="telefone">Telefone</label>    <input type="tel" id="telefone" placeholder="(11) 4455-4455">    </li>    <li>      <label for="aceito">Aceito que entrem em contato</label>      <input type="checkbox" id="aceito">    </li>    <li>      <button type="submit" onclick="ga('send',{hitType: 'event',eventCategory:'contato',eventAction:'enviado',eventLabel:'enviado'});">Enviar</button>    </li>  </ul></form><br><br>
 <h3 id="historia" class="secao-subtitulo">História</h3><p class="secao-paragrafo"><span class="highlight-3 odd">Viva Forevis aptent taciti sociosqu ad litora torquent. Vehicula non. Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum. A ordem dos tratores não altera o pão duris.</span>Diuretics paradis num copo é motivis de denguis. <span class="highlight-1 odd">Praesent malesuada urna nisi, quis volutpat erat hendrerit non.</span> Nam vulputate dapibus. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis. Quem manda na minha terra sou euzis!</p><p class="secao-paragrafo">Tá deprimidis, eu conheço uma cachacis que pode alegrar sua vidis. Casamentiss faiz malandris se pirulitá. Paisis, filhis, espiritis santis. Detraxit consequat et quo num tendi nada. Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Viva Forevis aptent taciti sociosqu ad litora torquent. Vehicula non. Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum. A ordem dos tratores não altera o pão duris.</p>
 <h3 id="valores" class="secao-subtitulo">Valores</h3><p class="secao-paragrafo"><span class="highlight-3 even">Mauris aliquet nunc non turpis scelerisque, eget. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis. Não sou faixa preta cumpadi, sou preto inteiris, inteiris.</span> <span class="highlight-1 even">Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo!</span> Si num tem leite então bota uma pinga aí cumpadi! Leite de capivaris, leite de mula manquis sem cabeça. Atirei o pau no gatis, per gatis num morreus. <span class="highlight-2 even">Suco de cevadiss deixa as pessoas mais interessantis. Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget. Nec orci ornare consequat.</span> Praesent lacinia ultrices consectetur. Sed non ipsum felis. Não sou faixa preta cumpadi, sou preto inteiris, inteiris.</p>
 <h5 class="subtitulo2">Valorinhos</h5><p class="secao-paragrafo">Copo furadis é disculpa de bebadis, arcu quam euismod magna. <span class="highlight-2 odd">Interagi no mé, cursus quis, vehicula ac nisi.</span> Sapien in monti palavris qui num significa nadis i pareci latim. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose.</p><a class="next-page" href="index.html">Início</a>
     </section>
   </main>
+  <script src="js/tagueamento.js"></script>
   <script src="js/jquery-3.5.1.min.js"></script>
   <script>
     window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-    ga('create', 'G-4GXZ8Q9PJR', 'auto');
-    ga('send', 'pageview');
+    ga('create', 'UA-12345-6', 'auto');
+    ga('send', {
+      hitType: 'pageview',
+      page: location.pathname
+    });
     </script>
   <script async src='https://www.google-analytics.com/analytics.js'></script>
   <script src="js/main.js"></script>
-  <script src="js/tagueamento.js"></script>
-  
 </body>
 </html>
