--- a/case-dp6/analise.html
+++ b/case-dp6/analise.html
@@ -87,14 +87,14 @@
   <script src="js/tagueamento.js"></script>
   <script src="js/jquery-3.5.1.min.js"></script>
   <script>
-    window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    
     ga('create', 'UA-12345-6', 'auto');
-    ga('send', {
-      hitType: 'pageview',
-      page: location.pathname
-    });
-    </script>
-  <script async src='https://www.google-analytics.com/analytics.js'></script>
+    ga('send', 'pageview');
+  </script>
   <script src="js/main.js"></script>
 </body>
 </html>
