--- a/case-dp6/index.html
+++ b/case-dp6/index.html
@@ -89,7 +89,10 @@
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
     
     ga('create', 'UA-12345-6', 'auto');
-    ga('send', 'pageview');
+    ga('send', {
+      hitType: 'pageview',
+      page: '/'
+    });
   </script>
   <script src="js/main.js"></script>
 </body>
